--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,12 @@
     margin: 0.27mm;
     position: relative;
     /*FONT*/
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    font-family: 'system-ui';
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .span_number{
@@ -43,11 +47,41 @@
     bottom: 2px;
 }
 
-.span_key{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
+.span_key{    
     position: absolute;
     left: 2px;
     top: 2px;
+}
+
+.font12{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.font10{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 10px;
+    font-weight: 400;
+}
+
+.demos{
+    background-color: #0a5cab;
+    background-color: #a058ad;
+    background-color: #49c30a;
+    background-color: #ed8a07;
+    background-color: #f3561a;
+    background-color: #f56149;
+    background-color: #066e6e;
+    background-color: #0054d3;
+    background-color: #ffb307;
+    background-color: #fd0000;
+    background-color: #780000;
+    background-color: #b34377;
+    background-color: #ff68ae;
+    background-color: #ffffff;
+    background-color: #484848;
+    font-size: 16px;
+    color:  darkgoldenrod;
+    font-weight: bolder;
 }
