--- a/css/modal.css
+++ b/css/modal.css
@@ -1,29 +1,50 @@
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(255, 255, 255, 0.0); 
   }
   
   /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    margin: 10px auto;
+    padding: 0px;
+    border: 0px solid #888;
+    width: 550px; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 20px;
+    /* box-sizing: border-box; */
+    box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.8);
+  }
+
+  .modal-content p {
+    font-size: 12px;
+    margin: 0;
+  }
+
+  .titulo{
+    padding: 0px 10px 0px 10px;
+    background-color: #1562a5;
+    color: #fff;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    cursor: move;
   }
   
   /* The Close Button */
   .close {
-    color: #aaa;
+    color: #fff;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -35,3 +56,80 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+
+/* MODAL */
+
+.form{
+  /* display: flex; */
+  flex-wrap: wrap;
+  padding: 20px;
+  /* flex-direction: column; */
+}
+
+.form input{
+  display: block;
+  /* width: 200px; */
+  height: 30px;
+  margin: 5px;
+  border: 1.8px solid #888;
+  border-radius: 5px;
+  outline: none !important;
+}
+
+#contenido{
+  width: 490px;
+}
+
+#font_bold{
+  width: 100px;
+}
+
+#fotn_ancho, #fotn_alto{
+  width: 50px;
+}
+
+#color_fondo, #color_letra{
+  width: 185px;
+}
+
+.form input:focus, input:hover{
+  border: 1.8px solid #1562a5;
+}
+
+.seccion{
+  display: flex;
+  /* justify-content: center; */
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.seccion label{
+  font-size: 12px;
+}
+
+#btn_cerrar{
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 0;
+  border-radius: 10px;
+  background-color: #ff4949de;
+  color: #fff;
+  font-size: 18px;
+}
+
+#btn_cerrar:hover{
+  border-radius: 10px;
+  background-color: #fd2d2dde;
+  color: #fff;
+  font-size: 18px;
+}
+
+.draggable {
+  touch-action: none;
+  user-select: none;
+}
